# LinuxApplicationDevelopment2022

01_GitBuildReq/: hello.c
03_Multifile/: Makefile  prog.c
03_Multifile/tests/: test2  test3
04_Text/: .randomize.sh.swp  randomize.sh
05_Debugging/: Makefile  correct1  correct2  range.c  scenario1  scenario2
06_Regexps/: Makefile  esub.c  test1  test2  test3  test4
07_TracingFencing/: Makefile  move.c  protect.c  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh
08_Environmental/: CMakeLists.txt  README.md  rhasher.c
08_Environmental/tests/: test_md5.sh  test_sha1.sh
09_I18n/: CMakeLists.txt
12_Documenting/: .guesser.c.swp  CMakeLists.txt  guesser.c  guesser.po
2_TerminalProject/: Makefile  Show.c
